# simple-sqlite-clone

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: pull_request_template.md
include/: IOUtils.hpp  MetaCommand.hpp  ReferenceWrapperString.hpp  Statement.hpp  Utils.hpp  constants.hpp
src/: IOUtils.cpp  MetaCommand.cpp  ReferenceWrapperString.cpp  Statement.cpp  Utils.cpp  main.cpp
tests/: test_IOUtils.cpp  test_MetaCommand.cpp  test_Statement.cpp  test_Utils.cpp
